--- a/BibleBeatMe/Views/Base.lproj/Main.storyboard
+++ b/BibleBeatMe/Views/Base.lproj/Main.storyboard
@@ -991,7 +991,8 @@
                                 <action selector="backButton:" destination="16m-Ly-mPt" id="xiw-Ma-UnS"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Finish" id="E4v-sD-wdg">
+                        <barButtonItem key="rightBarButtonItem" title="2 of 10" id="E4v-sD-wdg">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <segue destination="TkZ-IZ-R11" kind="presentation" id="Mkc-oK-aW3"/>
                             </connections>
